--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <h2>Hello, I'm TJ</h2>
     <div class="headshot">
         <picture>
-       <img src="images/Headshot.jpg" alt="Headshot of TJ Tyson" class="headshot">
+       <img src="Headshot.jpg" alt="Headshot of TJ Tyson" class="headshot">
+
     </picture>
 </div>
    
